# KeyExtractor

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
docs/: design.md
docs/assets/: keyextractor-ui-design.html
src/: main.cpp
src/core/: ArchiveItem.h  ArchiveListWorker.cpp  ArchiveListWorker.h
src/engine/: InStreamWrapper.cpp  InStreamWrapper.h  SevenZipEngine.cpp  SevenZipEngine.h  SevenZipGuids.cpp
src/ui/: FileTreeModel.cpp  FileTreeModel.h  MainWindow.cpp  MainWindow.h
test/sample-content/: notes.txt
test/sample-content/docs/: readme.md
